# CataanBot

./: .gitignore  COLONIST_RECON.md  HUD_RESEARCH.md  README.md  RESUME.md  TODO_VISUAL.md  audit_missed_recs.py  pyproject.toml
.github/workflows/: tests.yml
postmortems/: 2026-04-22_142609_BrickdDaddy.html  2026-04-22_152729_BrickdDaddy.html
src/cataanbot/: __init__.py  advisor.py  bridge.py  cli.py  colonist_diff.py  colonist_map.py  colonist_proto.py  config.py  dice_chart.py  eval.py  events.py  hand_tracker.py  hands.py  live.py  live_game.py  move_quality.py  parser.py  postmortem.py  recommender.py  render.py  repl.py  report.py  stats.py  timeline.py  tracker.py
tests/: conftest.py  test_advisor.py  test_bridge_dev_cards.py  test_bridge_move_quality.py  test_bridge_postmortem.py  test_cli.py  test_cli_integration.py  test_colonist_diff.py  test_colonist_map.py  test_colonist_proto.py  test_config.py  test_dice_chart.py  test_eval.py  test_hand_tracker.py  test_hands.py  test_live.py  test_live_game.py  test_move_quality.py  test_parser.py  test_postmortem.py  test_recommender.py  test_report.py  test_stats.py  test_timeline.py  test_tracker.py
userscript/: board_probe.js  colonist_cataanbot.user.js
